@@ -358,6 +358,7 @@ class phodevi extends phodevi_base
 				array(
 				'File-System' => phodevi::read_property('system', 'filesystem'),
 				'Mount Options' => phodevi::read_property('disk', 'mount-options-string'),
+				'Block Size' => phodevi::read_property('disk', 'block-size'),
 				'Disk Scheduler' => phodevi::read_property('disk', 'scheduler'),
 				'Disk Details' => phodevi::read_property('disk', 'extra-disk-details'),
 				),
